Add version info to puffinbrand and related strings

--- a/org.metadita.strings/plugin.xml
+++ b/org.metadita.strings/plugin.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright IBM Corporation 2011 All Rights Reserved. -->
+<!-- UPDATES:
+     Original delivery (no version #) coded to DITA-OT 1.5.4
+     Update 20131001: Add version / support info
+     -->
 <plugin id="org.metadita.puffinstrings">
+
+  <feature extension="package.support.name" value="Robert D Anderson"/>
+  <feature extension="package.support.email" value="robander @ ibm dot com"/>
+  <feature extension="package.version" value="1.0"/>
 
   <!-- Make strings available to XSL transforms. -->
   <feature extension="dita.xsl.strings" file="puffinstrings.xml"/>
