Add version/support info to java plugin

--- a/org.metadita.samplejava/plugin.xml
+++ b/org.metadita.samplejava/plugin.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- UPDATES:
+     Original delivery (no version #) coded to DITA-OT 1.5.4
+     Update 20131001: Add version/support info
+     -->
 <plugin id="org.metadita.samplejava.report">
+
+  <feature extension="package.support.name" value="Robert D Anderson"/>
+  <feature extension="package.support.email" value="robander @ ibm dot com"/>
+  <feature extension="package.version" value="1.0"/>
 
   <!-- Define new errors available to XSLT. -->
   <feature extension="dita.xsl.messages" file="newmessage.xml"/>
